...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/MainTVUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/MainIVToUserProfile"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/placeholder_image"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/all_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MainButtonAddTask"
        app:layout_constraintTop_toBottomOf="@+id/MainRV"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/MainButtonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
